--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
   <title>VR Playlist Maker</title>
 </head>
 <body>
+  <div id="app"></div>
   <script src="http://localhost:8888/bundle.js"></script>
 </body>
 </html>
