--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
   <div id="app"></div>
-  <script src="http://localhost:8888/bundle.js"></script>
+  <script>
+const script = document.createElement("script");
+if (process.env.NODE_ENV === "development") {
+  script.setAttribute("src", "http://localhost:8888/bundle.js");
+} else {
+  script.setAttribute("src", "./dist/bundle.js");
+}
+document.body.appendChild(script);
+  </script>
 </body>
 </html>
